--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,7 @@ jobs:
         autoreconf -i
     - name: Configure autotools (Linux, openssl)
       run: |
-        mkdir -p /src/static
-        ./configure --without-gnutls --with-openssl ARIA2_STATIC=yes -prefix=/src/static
+        ./configure --without-gnutls --with-openssl ARIA2_STATIC=yes -prefix=src
     - name: Build aria2
       run: |
         make
@@ -40,4 +39,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: aria2c
-        path: /src/static
+        path: src
