--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         autoreconf -i
     - name: Configure autotools (Linux, openssl)
       run: |
-        ./configure --without-gnutls --with-openssl ARIA2_STATIC=yes -prefix=src
+        ./configure --without-gnutls --with-openssl ARIA2_STATIC=yes --prefix=src
     - name: Build aria2
       run: |
         make
