--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         autoreconf -i
     - name: Configure autotools (Linux, openssl)
       run: |
-        ./configure --without-gnutls --with-openssl ARIA2_STATIC=yes -prefix=/home/runner/work/aria2/aria2/doc
+        ./configure --without-gnutls --with-openssl ARIA2_STATIC=yes -prefix=/usr/local/aria2c
     - name: Build aria2
       run: |
         make
@@ -39,4 +39,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: aria2c
-        path: /home/runner/work/aria2/aria2/doc
+        path: /usr/local/aria2c
